fixing image visibility

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 img, picture {
+    display: block;
     width: 100%;
 }
 
